# kittylitters

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  justfile
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: example_session.yml
src/: collect_windows.rs  collections.rs  data_types.rs  first_value.rs  get_focused_window_id.rs  kitty_ls.rs  lib.rs  main.rs  read_yml.rs  remove_windows.rs  run_operations.rs  set_logic.rs  set_operations.rs  windows.rs
tests/: collections.rs  set_logic.rs
