[package]
name = "kittylitters"
version = "0.1.0"
description = "A simple app to sync a yaml file which describes tabs and windows to the currently open kitty session"
repository = "https://github.com/bmblb3/kittylitters"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
