[package]
name = "kittylitters"
version = "0.2.1"
description = "A simple app to sync a yaml file which describes tabs and windows to the currently open kitty session"
repository = "https://github.com/bmblb3/kittylitters"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
indexmap = "2.12.0"
itertools = "0.14.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shell-words = "1.1.0"

[dev-dependencies]
rstest = "0.26.1"

[lints.clippy]
used_underscore_binding = "warn"
used_underscore_items = "warn"
